# mask_export_center_area

./: .gitignore  S37_mask.npy  app.py  download_ckpt.sh  download_dinov2.sh  media_processor.py  model_download.sh  pyproject.toml  requirements.txt  test.ipynb  video_analysis.py
config/: model_config.json
libs/: dinov2_latent_generator.py  media_processor.py  plotter.py  roi_observer.py  source_video.py  ui.py  video_analysis.py
