[tool.poetry]
name = "mask-export-center-area"
version = "0.1.0"
description = ""
authors = ["raiso <rainsoon717@gmail.com>"]
readme = "README.md"
packages = [{include = "mask_export_center_area"}]

[tool.poetry.dependencies]
python = "^3.11"
gradio = "^3.40.1"
plotly = "^5.15.0"
opencv-python = "^4.8.0.76"
numpy = "^1.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
